# leaffliction

./: .flake8  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  tmp.py
.github/workflows/: lint.yml
1-data_analysis/: Distribution.py  config.py
1-data_analysis/utils/: parse.py
2-data_augmentation/: Augmentation.py
3-transformation/: Transformation.py
3-transformation/parsing/: args.py
3-transformation/pipeline/: pipeline.py
3-transformation/transforms/: base.py  registry.py
3-transformation/transforms/ops/: __init__.py  analyse.py  fill_holes.py  otsu.py  rgb2lab.py  select_mask.py  veins.py
3-transformation/viz/: plotting.py
srcs/: Augmentation.py  Distribution.py  Transformation.py  __init__.py  augmentation.py  predict.py  train.py  transformation.py
srcs/1-data_analysis/: config.py
srcs/1-data_analysis/utils/: parse.py
srcs/2-data_augmentation/: Augmentation.py
srcs/2-data_augmentation/utils/: __init__.py  parsing.py  processing.py
srcs/3-img_transformation/parsing/: __init__.py
srcs/3-img_transformation/pipeline/: __init__.py
srcs/4-classification/: predict.py  train.py
srcs/4-classification/utils/: __init__.py  build_model.py  check_dir.py  hyperparams.py  load_datasets.py  split.py  split_data.py  train_model.py
srcs/pipeline/: transforms_pipeline.py
srcs/transforms/: __init__.py  registry.py
srcs/transforms/ops/: __init__.py  analyse.py  crop.py  gaussian.py  (+9 more)
srcs/utils/: augmentation.py  build_model.py  cache.py  check_dir.py  hyperparams.py  load_datasets.py  split_data.py  train_model.py  transforms.py
(+12 files in other folders)
