[project]
name = "leaffliction"
version = "0.1.0"
description = "A PyTorch-based leaf disease classification project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "attrs>=25.3.0",
    "matplotlib>=3.10.5",
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "build", "dist", ".venv"]
max-complexity = 10

[tool.black]
line-length = 88
target-version = ["py313"]
preview = false
