[project]
name = "leaffliction"
version = "0.1.0"
description = "A PyTorch-based leaf disease classification project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "albumentationsx>=2.0.9",
    "attrs>=25.3.0",
    "black>=25.1.0",
    "flake8>=7.3.0",
    "matplotlib>=3.10.5",
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "tensorflow>=2.20.0",
]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "build", "dist", ".venv"]
max-complexity = 10

[tool.black]
line-length = 88
target-version = ["py313"]
preview = false
